# codal-core

./: .gitignore  CMakeLists.txt  module.json  pkt_serial.md
inc/JACDAC/: JACDAC.h  JACDAC.md  JDAccelerometerDriver.h  JDAccelerometerService.h  JDBridgeDriver.h  JDBroadcastDriver.h  JDBroadcastDummy.h  JDClasses.h  JDControlLayer.h  JDControlService.h  JDDeviceManager.h  JDMessageBusDriver.h  JDMessageBusService.h  JDPairableDriver.h  JDPhysicalLayer.h  JDPinDriver.h  JDPinService.h  JDProtocol.h  JDRadioDriver.h  JDReliabilityTester.h  JDService.h  JDServiceClasses.h  JDServiceIdentifiers.h
inc/core/: CodalAssert.h  CodalCompat.h  CodalComponent.h  CodalConfig.h  CodalDevice.h  CodalDmesg.h  CodalFiber.h  CodalHeapAllocator.h  CodalListener.h  CodalLoadable.h  CodalResourceAllocator.h  CodalUSB.h  CodalUtil.h  DeviceComponent.h  DeviceFiber.h  DeviceListener.h  ErrorNo.h  EventModel.h  MemberFunctionCallback.h  NotifyEvents.h  codal_target_hal.h  codal_version.h  codal_version.h.in  gcc_compat.h
inc/driver-models/: AbstractButton.h  Accelerometer.h  CodalUSB.h  Compass.h  DMASingleWireSerial.h  Display.h  Flash.h  Gyroscope.h  Humidity.h  I2C.h  JackRouter.h  LowLevelTimer.h  NVMController.h  Pin.h  PinPeripheral.h  PktSerial.h  PktSerialProtocol.h  Pressure.h  Radio.h  SPI.h  SPIFlash.h  ScreenIO.h  Sensor.h  Serial.h  SingleWireSerial.h  Temperature.h  Timer.h
inc/drivers/: AbstractButton.h  Accelerometer.h  AnalogSensor.h  AnimatedDisplay.h  AsciiKeyMap.h  Button.h  CapTouchButton.h  CodalFS.h  Display.h  FAT.h  FSCache.h  FXOS8700.h  FXOS8700Accelerometer.h  FXOS8700Magnetometer.h  GameEngine.h  GhostFAT.h  GhostSNORFS.h  HID.h  HIDJoystick.h  HIDKeyboard.h  HIDMouse.h  I2C.h  ILI9341.h  JackRouter.h  KeyMap.h  KeyValueStorage.h  Keymap.h  LEDMatrix.h  LIS3DH.h  LSM303Accelerometer.h  LSM303Magnetometer.h  LevelDetector.h  LinearAnalogSensor.h  MAG3110.h  MMA8453.h  MMA8653.h  MPU6050.h  MSCSNORFS.h  MSCUF2.h  MessageBus.h  (+29 more)
inc/streams/: DataStream.h  EffectFilter.h  FIFOStream.h  LevelDetector.h  LevelDetectorSPL.h  LowPassFilter.h  MemorySource.h  Mixer.h  SerialStreamer.h  StreamAnalyzer.h  StreamFilter.h  StreamFlowTrigger.h  StreamNormalizer.h  StreamRecording.h  StreamSplitter.h  Synthesizer.h
inc/types/: BitmapFont.h  CoordinateSystem.h  DataStream.h  Event.h  Image.h  List.h  ManagedBuffer.h  ManagedList.h  ManagedString.h  ManagedType.h  Matrix4.h  RefCounted.h  Sprite.h
snorfs/: Makefile  README.md  SNORFS-test.cpp  SNORFS-test.h  SNORFS.cpp  SNORFS.h  SPIFlash.h
source/JACDAC/: JACDAC.cpp  JDAccelerometerDriver.cpp  JDAccelerometerService.cpp  JDBridgeDriver.cpp  JDBroadcastDriver.cpp  JDBroadcastDummy.cpp  JDControlLayer.cpp  JDControlService.cpp  JDDeviceManager.cpp  JDDriver.cpp  JDLogicDriver.cpp  JDMessageBusDriver.cpp  JDMessageBusService.cpp  JDPairableDriver.cpp  JDPhysicalLayer.cpp  JDPinDriver.cpp  JDPinService.cpp  JDProtocol.cpp  JDRadioDriver.cpp  (+5 more)
(+164 files in other folders)
